spent a lot of time making the button pixel perfect , truly a wonder

--- a/index.html
+++ b/index.html
@@ -38,7 +38,16 @@
                 </ul>
             </div>
         </div>
+        <div>
+        <button type="button" class="btn btn-light cart-button"><img src="public/img/cart-shopping-solid.svg" width="15px" height="15px" alt=""><p>Cart</p> <p>0</p></button>
+    </div>
+
     </nav>
+    <header>
+            
+    </header>
+    <main>
+    </main>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 
