starting main part

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
     </div>
 
     </nav>
-    <header>
-            
+    <header >
+            <h1 class="fw-bold">Shop in style </h1>
+            <h6 src="">With this shop homepage template</h6>
     </header>
     <main>
     </main>
