--- a/index.html
+++ b/index.html
@@ -43,12 +43,15 @@
     </div>
 
     </nav>
-    <header >
+    <header class="text-white bg-dark mt-1 d-flex justify-content-center align-items-center flex-column p-5" >
             <h1 class="fw-bold">Shop in style </h1>
-            <h6 src="">With this shop homepage template</h6>
+            <h6  class="text-secondary">With this shop homepage template</h6>
     </header>
     <main>
     </main>
+    <footer class="text-white bg-dark mt-5 d-flex justify-content-center align-items-center flex-column p-5 mb-0">
+        Copyright @ Your Website 2022
+    </footer>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 
