enough for the day , start stronger & faster tomorrow

--- a/index.html
+++ b/index.html
@@ -39,15 +39,30 @@
             </div>
         </div>
         <div>
-        <button type="button" class="btn btn-light cart-button"><img src="public/img/cart-shopping-solid.svg" width="15px" height="15px" alt=""><p>Cart</p> <p>0</p></button>
-    </div>
+            <button type="button" class="btn btn-light cart-button"><img src="public/img/cart-shopping-solid.svg"
+                    width="15px" height="15px" alt="">
+                <p>Cart</p>
+                <p>0</p>
+            </button>
+        </div>
 
     </nav>
-    <header class="text-white bg-dark mt-1 d-flex justify-content-center align-items-center flex-column p-5" >
-            <h1 class="fw-bold">Shop in style </h1>
-            <h6  class="text-secondary">With this shop homepage template</h6>
+    <header class="text-white bg-dark mt-1 d-flex justify-content-center align-items-center flex-column p-5">
+        <h1 class="fw-bold">Shop in style </h1>
+        <h6 class="text-secondary">With this shop homepage template</h6>
     </header>
     <main>
+        <div class="cart border border-dark d-flex flex-column w-25">
+            <div class="up-cart">
+            <img src="public/img/450x300.jpg" class=".img-fluid" alt="house">
+            <h2>Fancy Product</h2>
+            <p>$40.00 - $80.00</p>
+            </div>
+            <div class="down-cart ">
+               <button class="btn-light btn border border-dark"> View options </button>
+            </div>
+        </div>
+        
     </main>
     <footer class="text-white bg-dark mt-5 d-flex justify-content-center align-items-center flex-column p-5 mb-0">
         Copyright @ Your Website 2022
